feat: add MongoDB integration